# finding-implicatures

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  implModule.py  pyproject.toml  requirements.txt  run-docker.sh  run.sh
app/: main.py  model.py
app/core/: settings.py
app/routers/: query.py
app/services/: generator.py
app/utils/: model_strings.py
docker/: Dockerfile  docker-compose.yml
