[tool.poetry]
name = "finding-implicatures"
version = "0.2.0"
description = "Finding Implicatures from User Utterances"
authors = ["Sanghoon Kim <20144277+kim-sanghoon@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.17.0"
ray = {extras = ["serve"], version = "^1.11.0"}
torch = "^1.11.0"
fastapi = "^0.75.0"
sentencepiece = "^0.1.96"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
